--- a/popup.html
+++ b/popup.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Copiar número de WhatsApp</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>WhatsApp Extension</title>
 </head>
 <body>
-  <button id="copyButton">Copiar número</button>
+  <button id="openContacts">Abrir contactos</button>
+  <button id="copyName">Copiar nombre</button>
+  <button id="copyNumber">Copiar número</button>
   <script src="popup.js"></script>
 </body>
 </html>
